# fomo-cli

./: .env.example  .gitignore  LICENCE  README.md  fomo.py  pyproject.toml
app/: lib.py  parser.py
app/integrations/reddit/: __init__.py  run.py  utils.py
app/integrations/spotify/: __init__.py  run.py  utils.py
app/integrations/twitter/: __init__.py  run.py  utils.py
integrations/reddit/: __init__.py
integrations/spotify/: __init__.py  utils.py
integrations/twitter/: __init__.py  utils.py
lib/: __init__.py
parser/: __init__.py
